--- a/app/src/main/res/layout/fragment_movie_list.xml
+++ b/app/src/main/res/layout/fragment_movie_list.xml
@@ -22,33 +22,76 @@
 
     </RelativeLayout>
 
+    <TextView
+        android:id="@+id/title_popular"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/common_padding_min"
+        android:layout_marginStart="@dimen/common_margin_min"
+        android:fontFamily="@font/lobster"
+        android:text="@string/popular"
+        android:textColor="@color/white"
+        android:textSize="@dimen/common_size_default"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_movies_popular"
         android:layout_width="match_parent"
         android:layout_height="170dp"
+        android:layout_marginTop="@dimen/common_padding_min"
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/title_popular" />
 
+    <TextView
+        android:id="@+id/title_top_rated"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/common_padding_default"
+        android:layout_marginStart="@dimen/common_margin_min"
+        android:fontFamily="@font/lobster"
+        android:text="@string/top_rated"
+        android:textColor="@color/white"
+        android:textSize="@dimen/common_size_default"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/rv_movies_popular" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_movies_top_rated"
         android:layout_width="match_parent"
         android:layout_height="170dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/common_margin_min"
+
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintTop_toBottomOf="@+id/rv_movies_popular"
+        app:layout_constraintTop_toBottomOf="@+id/title_top_rated"
         tools:layout_editor_absoluteX="16dp" />
+
+    <TextView
+        android:id="@+id/title_upcoming"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/common_padding_default"
+        android:layout_marginStart="@dimen/common_margin_min"
+        android:fontFamily="@font/lobster"
+        android:text="@string/upcoming"
+        android:textColor="@color/white"
+        android:textSize="@dimen/common_size_default"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/rv_movies_top_rated" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_movies_up_coming"
         android:layout_width="match_parent"
         android:layout_height="170dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/common_margin_min"
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintTop_toBottomOf="@+id/rv_movies_top_rated"
+        app:layout_constraintTop_toBottomOf="@+id/title_upcoming"
         tools:layout_editor_absoluteX="16dp" />
 
 
