--- a/app/src/main/res/layout/fragment_movie_list.xml
+++ b/app/src/main/res/layout/fragment_movie_list.xml
@@ -30,7 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="350dp"
             android:layout_marginHorizontal="80dp"
-            android:layout_marginTop="@dimen/common_padding_default"
+            android:layout_marginTop="@dimen/common_margin_min"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +56,7 @@
             android:layout_marginTop="@dimen/common_padding_min"
             android:fontFamily="@font/lobster"
             android:text="@string/popular_home"
-            android:textColor="@color/yellow"
+            android:textColor="@color/white"
             android:textSize="@dimen/common_size_default"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -79,7 +79,7 @@
             android:layout_marginTop="@dimen/common_padding_default"
             android:fontFamily="@font/lobster"
             android:text="@string/top_rated_home"
-            android:textColor="@color/yellow"
+            android:textColor="@color/white"
             android:textSize="@dimen/common_size_default"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -104,7 +104,7 @@
             android:layout_marginTop="@dimen/common_padding_default"
             android:fontFamily="@font/lobster"
             android:text="@string/upcoming_home"
-            android:textColor="@color/yellow"
+            android:textColor="@color/white"
             android:textSize="@dimen/common_size_default"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
