--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,5 @@
     <color name="black_dense">#0E0E0E</color>
     <color name="grey_loading">#c8c8c9</color>
     <color name="yellow">#FDD200</color>
-    <color name="yellow_dense">#AC8F00</color>
+    <color name="yellow_dense">#C7A501</color>
 </resources>
