--- a/app/src/main/res/layout/fragment_movie_list.xml
+++ b/app/src/main/res/layout/fragment_movie_list.xml
@@ -56,7 +56,7 @@
             android:layout_marginTop="@dimen/common_padding_min"
             android:fontFamily="@font/lobster"
             android:text="@string/popular_home"
-            android:textColor="@color/white"
+            android:textColor="@color/yellow"
             android:textSize="@dimen/common_size_default"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -79,7 +79,7 @@
             android:layout_marginTop="@dimen/common_padding_default"
             android:fontFamily="@font/lobster"
             android:text="@string/top_rated_home"
-            android:textColor="@color/white"
+            android:textColor="@color/yellow"
             android:textSize="@dimen/common_size_default"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -103,7 +103,7 @@
             android:layout_marginTop="@dimen/common_padding_default"
             android:fontFamily="@font/lobster"
             android:text="@string/now_playing_home"
-            android:textColor="@color/white"
+            android:textColor="@color/yellow"
             android:textSize="@dimen/common_size_default"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -128,7 +128,7 @@
             android:layout_marginTop="@dimen/common_padding_default"
             android:fontFamily="@font/lobster"
             android:text="@string/upcoming_home"
-            android:textColor="@color/white"
+            android:textColor="@color/yellow"
             android:textSize="@dimen/common_size_default"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
