--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/movieFragment"
-        android:name="com.moviemain.ui.MovieListFragment"
+        android:name="com.moviemain.ui.view.main.MovieListFragment"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_movie_list">
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/movieDetailFragment"
-        android:name="com.moviemain.ui.MovieDetailFragment"
+        android:name="com.moviemain.ui.view.detail.MovieDetailFragment"
         android:label="@string/movie_detail"
         tools:layout="@layout/fragment_movie_detail">
         <argument
