--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.moviemain.ui.view.main.MovieListFragment"
+        android:name="com.moviemain.ui.view.main.HomeFragment"
         android:label="@string/app_name"
-        tools:layout="@layout/fragment_movie_list">
+        tools:layout="@layout/fragment_movie">
         <action
             android:id="@+id/action_movieFragment_to_movieDetailFragment"
             app:destination="@id/movieDetailFragment"
