refactoring titles in home

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -55,8 +55,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/common_margin_min"
-            android:layout_marginTop="@dimen/common_padding_min"
-            android:fontFamily="@font/lobster"
+            android:layout_marginTop="@dimen/common_margin_default"
+            android:fontFamily="@font/poppins_regular"
             android:text="@string/popular_home"
             android:textColor="@color/yellow"
             android:textSize="@dimen/common_size_default"
@@ -68,7 +68,7 @@
             android:id="@+id/rv_movies_popular"
             android:layout_width="match_parent"
             android:layout_height="170dp"
-            android:layout_marginTop="@dimen/common_padding_min"
+            android:layout_marginTop="@dimen/common_margin_header"
             android:orientation="horizontal"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintTop_toBottomOf="@id/title_popular" />
@@ -79,7 +79,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/common_margin_min"
             android:layout_marginTop="@dimen/common_padding_default"
-            android:fontFamily="@font/lobster"
+            android:fontFamily="@font/poppins_regular"
             android:text="@string/top_rated_home"
             android:textColor="@color/yellow"
             android:textSize="@dimen/common_size_default"
@@ -91,7 +91,7 @@
             android:id="@+id/rv_movies_top_rated"
             android:layout_width="match_parent"
             android:layout_height="170dp"
-            android:layout_marginTop="@dimen/common_margin_min"
+            android:layout_marginTop="@dimen/common_margin_header"
             android:orientation="horizontal"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintTop_toBottomOf="@+id/title_top_rated"
@@ -103,7 +103,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/common_margin_min"
             android:layout_marginTop="@dimen/common_padding_default"
-            android:fontFamily="@font/lobster"
+            android:fontFamily="@font/poppins_regular"
             android:text="@string/now_playing_home"
             android:textColor="@color/yellow"
             android:textSize="@dimen/common_size_default"
@@ -115,7 +115,7 @@
             android:id="@+id/rv_movies_now_playing"
             android:layout_width="match_parent"
             android:layout_height="170dp"
-            android:layout_marginTop="@dimen/common_margin_min"
+            android:layout_marginTop="@dimen/common_margin_header"
             android:orientation="horizontal"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintTop_toBottomOf="@id/title_now_playing"
