--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,7 @@
         android:id="@+id/nav_home"
         android:name="com.moviemain.ui.view.main.HomeFragment"
         android:label="@string/app_name"
-        tools:layout="@layout/fragment_movie">
+        tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_movieFragment_to_movieDetailFragment"
             app:destination="@id/movieDetailFragment"
