refactoring strings and dimens

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,3 +37,7 @@
         style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+<!--
+    app:itemTextAppearanceActive="@color/yellow"
+    app:itemTextAppearanceInactive="@color/grey_light"-->
