--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -33,8 +33,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/common_margin_min"
-            android:layout_marginTop="@dimen/common_padding_min"
-            android:text="@string/upcoming_home"
+            android:layout_marginTop="@dimen/common_margin_min"
+            android:text="@string/upcoming"
             android:gravity="center"
             android:textColor="@color/yellow"
             android:textSize="@dimen/common_size_default"
@@ -46,9 +46,9 @@
             android:id="@+id/rv_movies_up_coming"
             android:layout_width="match_parent"
             android:layout_height="650dp"
-            android:layout_marginTop="@dimen/common_padding_min"
+            android:layout_marginTop="@dimen/common_margin_min"
             android:orientation="vertical"
-            android:layout_marginHorizontal="@dimen/common_padding_min"
+            android:layout_marginHorizontal="@dimen/common_margin_min"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
