--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -57,7 +57,7 @@
             android:layout_marginStart="@dimen/common_margin_min"
             android:layout_marginTop="@dimen/common_margin_default"
             android:fontFamily="@font/poppins_regular"
-            android:text="@string/popular_home"
+            android:text="@string/popular"
             android:textColor="@color/yellow"
             android:textSize="@dimen/common_size_default"
             android:textStyle="bold"
@@ -78,9 +78,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/common_margin_min"
-            android:layout_marginTop="@dimen/common_padding_default"
+            android:layout_marginTop="@dimen/common_margin_default"
             android:fontFamily="@font/poppins_regular"
-            android:text="@string/top_rated_home"
+            android:text="@string/top_rated"
             android:textColor="@color/yellow"
             android:textSize="@dimen/common_size_default"
             android:textStyle="bold"
@@ -102,9 +102,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/common_margin_min"
-            android:layout_marginTop="@dimen/common_padding_default"
+            android:layout_marginTop="@dimen/common_margin_default"
             android:fontFamily="@font/poppins_regular"
-            android:text="@string/now_playing_home"
+            android:text="@string/now_playing"
             android:textColor="@color/yellow"
             android:textSize="@dimen/common_size_default"
             android:textStyle="bold"
