--- a/app/src/main/res/values-es-rAR/values.xml
+++ b/app/src/main/res/values-es-rAR/values.xml
@@ -2,25 +2,22 @@
     <string name="app_name">Peli Cool App</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="popular">Populares</string>
-    <string name="popular_home">Populares</string>
     <string name="top_rated">Mas Votadas</string>
-    <string name="top_rated_home">Mas Votadas</string>
     <string name="upcoming">Próximamente</string>
-<!--    <string name="upcoming_home">____________ Próximamente ____________</string>-->
-    <string name="upcoming_home">Próximamente</string>
-    <string name="movie_title">Movie Title</string>
-    <string name="movie_image">Movie Image</string>
+    <string name="now_playing">Estrenos</string>
+    <!--    <string name="upcoming_home">____________ Próximamente ____________</string>-->
+    <string name="movie_title">Titulo</string>
+    <string name="movie_image">Imagen</string>
     <string name="overview">Información</string>
     <string name="share">Compartir</string>
     <string name="bookmark">Guardar</string>
     <string name="favourite">Favorito</string>
     <string name="error_dialog">Error</string>
     <string name="error_dialog_detail">Ha ocurrido un error obteniendo la información</string>
-    <string name="try_again">Reintentar</string>
     <string name="movie_detail">Detalles</string>
     <string name="retry">Reintentar</string>
-    <string name="now_playing_home">Estrenos</string>
     <string name="home">Inicio</string>
     <string name="search">Buscar</string>
     <string name="ok">OK</string>
+    <string name="try_again">Intentar otra vez</string>
 </resources>
