--- a/app/src/main/res/values-es-rAR/values.xml
+++ b/app/src/main/res/values-es-rAR/values.xml
@@ -20,4 +20,5 @@
     <string name="search">Buscar</string>
     <string name="ok">OK</string>
     <string name="try_again">Intentar otra vez</string>
+    <string name="my_list">Mi Lista</string>
 </resources>
