--- a/app/src/main/res/menu/button_menu.xml
+++ b/app/src/main/res/menu/button_menu.xml
@@ -5,8 +5,8 @@
         android:title="@string/home"
         android:icon="@drawable/ic_home"/>
 
-    <item android:id="@+id/nav_upcoming"
-        android:title="@string/upcoming"
+    <item android:id="@+id/nav_gallery"
+        android:title="@string/gallery"
         android:icon="@drawable/ic_upcoming"/>
 
     <item android:id="@+id/nav_bookmark"
