--- a/app/src/main/res/layout/movie_item_bookmark.xml
+++ b/app/src/main/res/layout/movie_item_bookmark.xml
@@ -30,6 +30,7 @@
                 android:layout_height="180dp"
                 android:scaleType="centerCrop"
                 android:src="@mipmap/ic_launcher"
+                android:contentDescription="@string/bookmark"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
