--- a/app/src/main/res/layout/movie_item_gallery.xml
+++ b/app/src/main/res/layout/movie_item_gallery.xml
@@ -21,7 +21,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:src="@mipmap/ic_launcher"/>
+            android:src="@mipmap/ic_launcher"
+            android:contentDescription="@string/gallery"/>
 
     </androidx.cardview.widget.CardView>
 
